syntax = "proto3";

option go_package = "github.com/hyperledger/fabric/protos/peer";
option java_package = "org.hyperledger.fabric.protos.peer";
option java_outer_classname = "TransactionPackage";

package protos;

message SubscribeRequest {
    string ChannelId = 1;
    string OrdererEndPoint = 2;
}

message SubscribeResponse {
    string msg = 1;
}

service SubscribeService {
    rpc NotifySubscriber(SubscribeRequest) returns(SubscribeResponse);
}